JG-2006-11-27-0: Bugfix:    The checktree_arco was moved to this project from
                            wrong ARCo branch (V60_ARCO_BRANCH, should have been
                            maintrunk).

RM-2006-11-27-0: Enhancem.: added test for sgepasswd binary for bugfix 6472859
                            system_tests/windows/sgepasswd
                 Review:    HP

CR-2006-11-24-2: Enhancem.: added test for issue 2122/6497217
                 Review:    RD

CR-2006-11-24-1: Cleanup:   added adoc headers and test remotely the 
                            availability of the testsuite java properties file 
                            for 65 version testing

CR-2006-11-24-0: Enhancem:  del_pe now supports raise_error 
                 Review:    RD

AA-2006-11-23-0: Enhancem:  move of arco testsuite checktree to testsuite 
                            subproject
                
CR-2006-11-23-2: Cleanup:   modified migrate test to always to the heartbeat
                            test in runlevel 0 - report exactly one warning
                            if no second shadowd is set for other levels
                 Review:    RD

CR-2006-11-23-1: Bugfix:    Fixed some testsuite tests:
                 Review:    RD

JG-2006-11-23-0: Enhancem.: For compiling java sources, create the file
                            build_testsuite.properties containing build host
                            and sge_root directory.
                 Bugfix:    qconf test needs root access, but didn't request it.
                 Cleanup:   bugs/issuezilla/1270.
                 Review:    AA

CR-2006-11-22-0: Bugfix:    fixed consumable_resources test
                 Review:    RD

RD-2006-11-20-0: Bugfix:    fixed some issues introduced by resource quota
                            renaming
                 Review:    AA

RD-2006-11-17-0: Cleanup:   renamed limitation rule sets to resource quota sets
                 Review:    AA
